# FPGA_Design_Agent

./: .coverage  .coverage 2  .dockerignore  .env.example  .gitignore  .gitmodules  AGENTS.md  DEMO_SCRIPT.md  DemoReadiness.MD  Dockerfile  DocumentationGoals.md  DriftClariciations.MD  ImprovementPlan.md  LICENSE  Makefile  New feature goals.md  PERSONAL_CONTRIBUTIONS.md  PLANS.md  PROJECT_PLAN.md  README.md  conftest.py  generate_codebase_context.py  pyproject.toml  pytest.ini  run_infrastructure_tests.py  run_tests.py  tool_registry.yaml  verilog_rag_memory.json
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
Docker/: Dockerfile  run_process.py
Docker/verilog_test_files/: simple_alu.v  simple_counter.v  syntax_errors.v  unused_signals.v
adapters/: AGENTS.override.md
adapters/llm/: Q34BT.py  adapter_anthropic.py  adapter_cohere.py  adapter_google.py  adapter_grok.py  adapter_groq.py  adapter_openai.py  adapter_qwen.py  adapter_qwen34b.py  deps.txt  gateway.py  gateway_config.py  gateway_factory.py  llm_gateway.py  test_qwen_gateway.py
adapters/observability/: agentops.py  jsonl.py
adapters/rag/: QUICKSTART.md  TESTING.md  __init__.py  example_usage.py  rag_service.py  test_rag.py  verilog_knowledge_base.txt  verilog_knowledge_base.txt.example
agents/: AGENTS.override.md
agents/Finalizer/: worker.py
agents/common/: base.py  llm_gateway.py  rag_queries.py  tb_sanitizer.py
agents/debug/: worker.py
agents/finalizer/: __init__.py  worker.py
agents/implementation/: worker.py
agents/planner/: worker.py
agents/reflection/: worker.py
agents/spec_helper/: checklist.py  llm_helper.py  rigor.py  worker.py
agents/testbench/: worker.py
apps/cli/: cli.py  doctor.py  execution_narrator.py  run_full_demo.py  run_suite.py  run_validation_report.py  run_verilog_eval.py  spec_flow.py
apps/ui_backend/: server.py
apps/vscode-extension/: README.md  package-lock.json  package.json  tsconfig.json
artifacts/observability/: costs.jsonl  suite_accum4_summary.json  suite_and2_summary.json  suite_counter3_summary.json  suite_mux2_summary.json
benchmarks/verilog_eval/: README.md  campaign.example.yaml  oracle_manifest.example.json
config/: runtime.benchmark.gpt4o.local.yaml  runtime.benchmark.repair3.yaml  runtime.benchmark.yaml  runtime.testspec_matrix.yaml  runtime.wavefix_failed41.yaml  runtime.wavefix_smoke.yaml  runtime.wavefix_smoke_live.yaml  runtime.yaml
config/domains/: agents.yaml  benchmark.yaml  cli.yaml  infrastructure.yaml  rag.benchmark.yaml  rag.yaml  verification.yaml
config/run/: benchmark.yaml  engineer.yaml
config/scenarios/: demo_multimodule.yaml  testspec_matrix.yaml  wavefix_failed41.yaml  wavefix_smoke.yaml  wavefix_smoke_live.yaml
core/observability/: agentops_tracker.py  emitter.py  events.py  execution_metrics.py  run_artifacts.py  setup.py
core/prompting/: __init__.py  registry.py
core/runtime/: broker.py  config.py  llm_rate_control.py  paths.py  retry.py  testbench_contract.py
core/schemas/: SCHEMAS.md  __init__.py  contracts.py  planning_spec.py  specifications.py
core/tools/: registry.py
docs/: Agents.md  Architecture.md  README.md  agents.md  architecture.md  benchmark-methodology.md  benchmark-optimization-log-20260429.md  cli.md  config-migration.md  demo-script.md  glossary.md  hiring-brief.md  observability.md  overview.md  project-brief.md  queues-and-workers.md  schemas.md  showcase_video_script.md  spec-and-planning.md  team_recording_instructions.md  test-plan.md  vision-and-ux.md
docs/case-studies/: example-run.md
docs/components/: llm-gateway.md  orchestrator.md  ui-bridge.md  workers.md
docs/reference/: codex-agentic-coding.md  runtime-config.md  test-commands.md
docs/workflows/: artifact-hygiene.md  benchmark-campaigns.md  benchmark-run.md  failure-repair-loop.md  interactive-run.md
examples/counter3/: README.md
infrastructure/: README.md  SETUP_NOTES.md  docker-compose.yml  rabbitmq-definitions.json  rabbitmq.conf  test_connect_chroma.py
llm_gateway/: __init__.py  gateway.py  requirements.txt
llm_gateway/adapters/: __init__.py  adapter_anthropic.py  adapter_gemini.py  adapter_openai.py  adapter_qwen34b.py
llm_gateway/examples/: Q34BT.py  example_anthropic_gemini.py  test_qwen_gateway.py  usage_example.py
llm_gateway/temporary_docs/: .gitignore  README.md  pyproject.toml  setup.py
llm_gateway/transport/: __init__.py  base.py  registry.py  transport_external.py  transport_huggingface.py  transport_ollama.py
orchestrator/: context_builder.py  orchestrator_service.py  planner.py  preplan_validator.py  state_machine.py  task_memory.py
packaging/homebrew/: README.md  requirements.txt  runtime.yaml  stage_runtime.py
prompts/: AGENTS.override.md
schemas/: SCHEMAS.md  __init__.py  contracts.py
scripts/: IMPLEMENTATION_SUMMARY.md  README_run_local_spec.md  demo_run_local_spec.bat  demo_run_local_spec.sh  index_runs.py  reset_demo_user_config.sh  run_benchmark_campaign.py  run_local_spec.py  seed_demo_rag_memory.sh  setup_homebrew_demo_env.sh  sync_demo_shell_env.sh  test_homebrew_install.sh  validate_docs.py
tests/: AGENTS.override.md  README.md  __init__.py  conftest.py  run_infrastructure_tests.py  run_schema_tests.py
tests/adapters/: test_openai_gateway.py  (+1 more)
workers/: AGENTS.override.md
(+1723 files in other folders)
