# /pyproject.toml

[tool.poetry]
name = "multi-agent-hardware-design"
version = "0.1.0"
description = "A multi-agent system for accelerating hardware design."
authors = ["Jacobo Forero", "Dexter Pressley", "Mateus Verffel Mayer" , "Caleb Elliott", "Andrew Chambers", "Sammy Fares"]
readme = "README.md"
packages = [
    { include = "adapters" },
    { include = "agents" },
    { include = "apps" },
    { include = "core" },
    { include = "orchestrator" },
    { include = "workers" },
]

# --- VERSIONING SECTION ---
[tool.poetry.dependencies]
python = ">=3.12, <4.0"
pydantic = "^2.12.1"
httpx = "^0.27.0"
pika = "^1.3.2"
rich = "^13.7.1"
agentops = { version = "^0.4.21", optional = true, python = "<3.14" }
openai = "1.91.0"
anthropic = "^0.40.0"
google-genai = "^1.0.0"
cohere = "^5.11.0"
pyyaml = "^6.0.1"
langchain = "^0.1"
llama-index-core = "^0.14.20"
llama-index-embeddings-openai = "^0.5.0"

[tool.poetry.extras]
observability = ["agentops"]

[tool.poetry.group.ui]
optional = true

[tool.poetry.group.ui.dependencies]
fastapi = "^0.127.0"
uvicorn = "^0.40.0"

# Optional: Dependencies only needed for development (testing, linting, etc.)
[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
pytest-asyncio = "^0.23.0"
ruff = "^0.4.4"
# Infrastructure testing dependencies
requests = "^2.31.0"


[tool.poetry.scripts]
mhd = "apps.cli.cli:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
